Enabled responsive layout for main template

--- a/resources/main.html
+++ b/resources/main.html
@@ -14,11 +14,6 @@
 		body {
 			padding-bottom: 50px;
 		}
-		.container{
-			max-width:none!important; 
-			width:970px 
-			}
-			
 		.highlight {
 			width: 100%;
 		}
@@ -41,6 +36,7 @@
 			margin: auto; 
 			margin-top: 50px;
 			margin-bottom: 50px;
+			max-width: 100%;
 		}
 		
 	</style>
